# afb-audiohighlevel

./: .gitmodules  .gitreview  CMakeLists.txt  README.md
afb-utilities/: filescan-utils.c  filescan-utils.h
ahl-binding/: CMakeLists.txt  ahl-apidef.h  ahl-apidef.json  ahl-binding.c  ahl-binding.h  ahl-config.c  ahl-deviceenum.c  ahl-json.c
ahl-policy/: CMakeLists.txt  ahl-interface.h  ahl-policy.c  ahl-policy.h
ahl-utilities/: CMakeLists.txt  ahl-policy-utils.c  ahl-policy-utils.h
conf.d/app-templates/: README.md
conf.d/app-templates/cmake/: common.cmake
conf.d/app-templates/cmake/cmake.d/: 01-build_options.cmake  02-variables.cmake  03-macros.cmake  04-extra_targets.cmake
conf.d/app-templates/docs/dev_guide/: 1_Quickstart.md  3_advanced_usage.md  4_advanced_customization.md
conf.d/app-templates/samples.d/: config.cmake.sample
conf.d/app-templates/template.d/: gdb-native-target.ini.in  start-on-target.sh.in
conf.d/cmake/: config.cmake
conf.d/project/: .asoundrc  .asoundrc-audiok  .asounrc-fulup  CMakeLists.txt  README.md  agl-ahl-config.json  ahl-aaaa-config.json  ahl-audio4a-config.json  ahl-fulup4a-config.json  asoundrc-fulup4a
conf.d/project/alsa.d/: asoundrc.sample
conf.d/project/alsa.d/ucm.sample/: HiFi.conf  README
conf.d/project/json.d/: ahl-binding.json  onload-audio-control.json
conf.d/wgt/: config.xml.in
htdocs/: AFB-websock.js  AudioBinding.js  CMakeLists.txt  README.md  alsa-core.html  alsa-hal.html  audio-control.html  audio-logic.html  audiobackend.html  audiohl-demo.html  audiohl.html  index.html
nbproject/: configurations.xml  project.xml
src/: CMakeLists.txt  ahl-apidef.h  ahl-apidef.json  ahl-binding.c  ahl-binding.h  ahl-config.c  ahl-deviceenum.c  ahl-interface.h  ahl-json.c  ahl-json.h  ahl-policy-utils.c  ahl-policy-utils.h  ahl-policy.c  ahl-policy.h  ahl-policyJSON.c  ahl-policyJSON.h
