###########################################################################
# Copyright 2017 Audiokinetic.com
#
# author: Francois Thibault <fthibault@audiokinetic.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
###########################################################################

# Add target to project dependency list
PROJECT_TARGET_ADD(audiohighlevel)

    # Define project Targets
    ADD_LIBRARY(${TARGET_NAME} MODULE ahl-binding.c ahl-deviceenum.c ahl-config.c)

    # Binder exposes a unique public entry point
    SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
	PREFIX "afb-"
        LABELS "BINDINGV2"
	LINK_FLAGS  ${BINDINGS_LINK_FLAG}
        OUTPUT_NAME ${TARGET_NAME}
    )

    # Change default OPenAPI file
    SET_OPENAPI_FILENAME("ahl-apidef")

    # Define target includes
    TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME}
        PUBLIC ${GLIB_PKG_INCLUDE_DIRS}
    )

    # Library dependencies (include updates automatically)
    # Find package for GLIB does not seem to export
    TARGET_LINK_LIBRARIES(${TARGET_NAME} 
        ahl-policy
        ahl-utilities
        afb-utilities
        ${GLIB_PKG_LIBRARIES}
        ${link_libraries}
    )

